# subscription-collector

./: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: content_router.py
app/core/: config.py  database.py
app/models/: content.py
app/schemas/: content.py
app/services/: manager.py
app/services/collector/: base.py  naver.py  youtube.py
app/task/: collector_task.py
app/utils/: pagination.py  scraper.py
migrations/: env.py
migrations/versions/: 78b5d80d3bd9_initial_collector_schema.py
